2003-09-25  Marcus Brinkmann  <marcus@gnu.org>

	* loader.c [HAVE_CONFIG_H]: Include <config.h>.
	(loader_elf_load): Rewritten architecture check of ELF binary,
	support PPC now.

2003-09-25  Marcus Brinkmann  <marcus@gnu.org>

	* elf.h: Remove cruft.

2003-09-21  Marco Gerards  <metgerards@student.han.nl>

	* output-serial.c (serial_init): Make sure the order of the
	arguments of outb are correct.

	* Makefile.am (AM_CPPFLAGS): New variable.

2003-09-19  Marcus Brinkmann  <marcus@gnu.org>

	* ia32-cmain.c (debug_dump): Cast mod[nr].string to char *.
	* laden.c (parse_args): Remove superfluous arguments.
	* loader.c: Include <string.h>.
	* kip-fixup.c (kip_fixup): Use %p for pointer.
	* output-serial.c: Include <stdlib.h>.
	
	* Makefile.am (laden_CFLAGS): Add -I$(top_srcdir)/libc-parts.
	* output.c: Include <stdlib.h> and <string.h>.
	* output.h (struct output_driver): Add CFG argument to INIT
	function.
	(output_init): Make NAME argument const, rename it to DRIVER.
	* output.c (output_init): Likewise.  Only check if the prefix of
	DRIVER is a driver name.  Then skip a trailing comma and pass the
	remainder via the new variable DRIVER_CFG to the init function of
	the driver.
	* output-vga.c (vga_init): Add CFG argument.
	* output-serial.c: New file by Daniel Wagner <wagi@gmx.de>.

2003-07-26  Marcus Brinkmann  <marcus@gnu.org>

	* Initial check-in.
