@@ -1,3 +1,10 @@
+2003-09-25  Johan Rydberg  <jrydberg@night.trouble.net>
+
+        * laden.c (main): Call start_kernel to launch kernel instead
+        of calling the kernel start address.
+        * laden.h (start_kernel): Prototype.
+        * ia32-cmain.c (start_kernel): New function.
+
 2003-09-25  Marcus Brinkmann  <marcus@gnu.org>
 
 	* loader.c [HAVE_CONFIG_H]: Include <config.h>.
